Maps resize on small window, styling, and file cleanup.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <div class="wrapper">
         <div style="float:left">
             <div class="logo"></div>
-            <iframe class="fb" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeaverpondfarmnh&width=151&layout=button_count&action=like&size=large&show_faces=false&share=true&height=46&appId" width="288" height="46" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            <iframe class="fb" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeaverpondfarmnh&width=151&layout=button_count&action=like&size=large&show_faces=false&share=true&height=46&appId"></iframe>
         </div>
-        <iframe class="maps" width="400" height="320" frameborder="0"
-        src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw" allowfullscreen></iframe>
+        <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
     </div>
 </body>
 </html>
