Basic port to long scrolling site.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,38 @@
     <link rel="icon" href="imgs/favicon.ico">
 </head>
 <body>
-    <div class="wrapper">
-        <div style="float:left">
-            <div class="logo"></div>
+    <div class="bigContent home">
+        <div class="logoWrapper">
+            <div class="logo titleLogo"></div>
             <iframe class="fb" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fbeaverpondfarmnh&width=151&layout=button_count&action=like&size=large&show_faces=false&share=true&height=46&appId"></iframe>
         </div>
         <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Fresh Syrup</h2>
+        </div><div class="splitContent syrup imgSplitContent"></div>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent pie imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Homemade Pies</h2>
+        </div>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent textsplitContentWrapper">
+                <h2 class="title">Christmas Trees</h2>
+                We make our own fresh-cut balsam wreaths (order early if you want them available at Thanksgiving) and we grow our own Christmas trees (we also buy from a grower in the Orford/Lyme, NH area and one in the Springfield, VT area...only fresh-cut local will do!)
+        </div><div class="splitContent trees imgSplitContent"></div>
+    </div>
+    <div class="footer">
+        <div class="footerCell">
+            <div class="footerLogo logo"></div>
+        </div>
+        <div class="footerText footerCell">1047 John Stark Highway<br>
+            Newport, New Hampshire 03773<br>
+            (603) 543-1107<br>
+            beaverpondfarm1780@gmail.com
+        </div>
     </div>
 </body>
 </html>
