--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             <h2 class="title">Homemade Pies</h2>
         </div>
     </div>
-    <div class="bigContent splitContentWrapper">
-        <div class="splitContent textsplitContentWrapper">
+    <div class="bigContent trees">
+        <div class="textOverlay">
                 <h2 class="title">Christmas Trees</h2>
                 We make our own fresh-cut balsam wreaths (order early if you want them available at Thanksgiving) and we grow our own Christmas trees (we also buy from a grower in the Orford/Lyme, NH area and one in the Springfield, VT area...only fresh-cut local will do!)
-        </div><div class="splitContent trees imgSplitContent"></div>
+        </div>
     </div>
     <div class="footer">
         <div class="footerCell">
