Added more sections/imgs/text.

--- a/index.html
+++ b/index.html
@@ -23,19 +23,78 @@
     </div>
     <div class="bigContent splitContentWrapper">
         <div class="splitContent textsplitContentWrapper">
-            <h2 class="title">Fresh Syrup</h2>
-        </div><div class="splitContent syrup imgSplitContent"></div>
+            <h2 class="title">Fruit & Veggies</h2>
+            peas, asparagus fiddleheads, dandelion greens, beet grens, lettuce, salad greens, radishes, kale,
+            blueberries, raspberries,
+            preserving/pickling?
+            corn, tomatoes,
+            cucumbers, summer squashes, beans,
+            winter squash, beets, onions,
+            apples and cider,
+            pumpkins, cornstalks, gourds
+        </div><div class="splitContent fruitsAndVeggies imgSplitContent"></div>
+    </div> 
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent localWares imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Local Wares</h2>
+            Market. Local cheese, ice cream, soda, spices, eggs, meats, honey etc. crafts and trinkets (NH/VT) cider.. food products, gift baskets
+        </div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent pie imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
-            <h2 class="title">Homemade Pies</h2>
+        <div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Baked Goods</h2>
+            Pies, jam, snacks, goodies, ... famous homemade Thanksgiving pies.
+        </div><div class="splitContent pie imgSplitContent"></div>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent meat imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Meat</h2>
+            Beef and lamb raised right on the farm.
+        </div>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Pick Your Own</h2>
+            Pick your own raspberries on an acre and a half of luscious easy to pick raspberries.
+            Free picking containers, water, and bathrooms.
+            Stop by the market for snacks or lunch and have a picnic while you pick.
+            Usually opens between July 4th and 10th and lasts through July.
+            Hours 8:00 AM to 6:00 PM - weather permitting - call for daily conditions.
+            We have pick your own blueberries too in a good year!
+        </div><div class="splitContent pickyourown imgSplitContent"></div>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent hay imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Hay</h2>
+            Hay... available by order.
+        </div>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Firewood</h2>
+            Firewood... available by order.
+        </div><div class="splitContent firewood imgSplitContent"></div>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent plowing imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Plowing</h2>
+            Plowing...
         </div>
     </div>
     <div class="bigContent trees">
         <div class="textOverlay">
-                <h2 class="title">Christmas Trees</h2>
-                We make our own fresh-cut balsam wreaths (order early if you want them available at Thanksgiving) and we grow our own Christmas trees (we also buy from a grower in the Orford/Lyme, NH area and one in the Springfield, VT area...only fresh-cut local will do!)
+                <h2 class="title">Christmas Trees and Balsam Wreathes</h2>
+                We make our own fresh-cut balsam wreaths.
+                Order early if you want them available at Thanksgiving.
+                We also grow our own Christmas trees and buy from two local NH and VT growers.
+                Only fresh-cut local will do!
         </div>
+    </div>
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent textsplitContentWrapper">
+            <h2 class="title">Syrup</h2>
+            Home made syrup...
+        </div><div class="splitContent syrup imgSplitContent"></div>
     </div>
     <div class="footer">
         <div class="footerCell">
