--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent textsplitContentWrapper">
+        <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Fruit & Veggies</h2>
             peas, asparagus fiddleheads, dandelion greens, beet grens, lettuce, salad greens, radishes, kale,
             blueberries, raspberries,
@@ -35,25 +35,25 @@
         </div><div class="splitContent fruitsAndVeggies imgSplitContent"></div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent localWares imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+        <div class="splitContent localWares imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Local Wares</h2>
             Market. Local cheese, ice cream, soda, spices, eggs, meats, honey etc. crafts and trinkets (NH/VT) cider.. food products, gift baskets
         </div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent textsplitContentWrapper">
+        <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Baked Goods</h2>
             Pies, jam, snacks, goodies, ... famous homemade Thanksgiving pies.
         </div><div class="splitContent pie imgSplitContent"></div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent meat imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+        <div class="splitContent meat imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Meat</h2>
             Beef and lamb raised right on the farm.
         </div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent textsplitContentWrapper">
+        <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Pick Your Own</h2>
             Pick your own raspberries on an acre and a half of luscious easy to pick raspberries.
             Free picking containers, water, and bathrooms.
@@ -64,37 +64,37 @@
         </div><div class="splitContent pickyourown imgSplitContent"></div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent hay imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+        <div class="splitContent hay imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Hay</h2>
             Hay... available by order.
         </div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent textsplitContentWrapper">
+        <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Firewood</h2>
             Firewood... available by order.
         </div><div class="splitContent firewood imgSplitContent"></div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent plowing imgSplitContent"></div><div class="splitContent textsplitContentWrapper">
+        <div class="splitContent plowing imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Plowing</h2>
             Plowing...
         </div>
     </div>
-    <div class="bigContent trees">
-        <div class="textOverlay">
+    <div class="bigContent splitContentWrapper">
+        <div class="splitContent textSplitContentWrapper">
                 <h2 class="title">Christmas Trees and Balsam Wreathes</h2>
                 We make our own fresh-cut balsam wreaths.
                 Order early if you want them available at Thanksgiving.
                 We also grow our own Christmas trees and buy from two local NH and VT growers.
                 Only fresh-cut local will do!
-        </div>
+        </div><div class="splitContent trees imgSplitContent"></div>
     </div>
     <div class="bigContent splitContentWrapper">
-        <div class="splitContent textsplitContentWrapper">
+        <div class="splitContent syrup imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Syrup</h2>
             Home made syrup...
-        </div><div class="splitContent syrup imgSplitContent"></div>
+        </div>
     </div>
     <div class="footer">
         <div class="footerCell">
