Added side nav.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
     <link rel="icon" href="imgs/favicon.ico">
 </head>
 <body>
+    <div class="sideNav">
+        <ul>
+            <li><a href="#"><img src="imgs/farmicon.png"></a></li>
+            <li><a href="#fruitsAndVeggies"><img src="imgs/cornicon.png"></a></li>
+            <li><a href="#localWares"><img src="imgs/jaricon.png"></a></li>
+            <li><a href="#bakedGoods"><img src="imgs/pieicon.png"></a></li>
+            <li><a href="#meat"><img src="imgs/meaticon.png"></a></li>
+            <li><a href="#pickYourOwn"><img src="imgs/raspberryicon.png"></a></li>
+            <li><a href="#hay"><img src="imgs/hayicon.png"></a></li>
+            <li><a href="#firewood"><img src="imgs/axeicon.png"></a></li>
+            <li><a href="#plow"><img src="imgs/plowicon.png"></a></li>
+            <li><a href="#trees"><img src="imgs/treeicon.png"></a></li>
+            <li><a href="#syrup"><img src="imgs/syrupicon.png"></a></li>
+        </ul>
+    </div>
     <div class="bigContent home">
         <div class="logoWrapper">
             <div class="logo titleLogo"></div>
@@ -21,7 +36,7 @@
         </div>
         <iframe class="maps" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJe2DDlenr4YkRfa7I-zThFgI&key=AIzaSyAVNXlQDXKso-4BJ99BnqJGdZmgTovFLpw"></iframe>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="fruitsAndVeggies" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Fruit & Veggies</h2>
             peas, asparagus fiddleheads, dandelion greens, beet grens, lettuce, salad greens, radishes, kale,
@@ -34,25 +49,25 @@
             pumpkins, cornstalks, gourds
         </div><div class="splitContent fruitsAndVeggies imgSplitContent"></div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="localWares" class="bigContent splitContentWrapper">
         <div class="splitContent localWares imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Local Wares</h2>
             Market. Local cheese, ice cream, soda, spices, eggs, meats, honey etc. crafts and trinkets (NH/VT) cider.. food products, gift baskets
         </div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="bakedGoods" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Baked Goods</h2>
             Pies, jam, snacks, goodies, ... famous homemade Thanksgiving pies.
         </div><div class="splitContent pie imgSplitContent"></div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="meat" class="bigContent splitContentWrapper">
         <div class="splitContent meat imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Meat</h2>
             Beef and lamb raised right on the farm.
         </div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="pickYourOwn" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Pick Your Own</h2>
             Pick your own raspberries on an acre and a half of luscious easy to pick raspberries.
@@ -63,25 +78,25 @@
             We have pick your own blueberries too in a good year!
         </div><div class="splitContent pickyourown imgSplitContent"></div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="hay" class="bigContent splitContentWrapper">
         <div class="splitContent hay imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Hay</h2>
             Hay... available by order.
         </div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="firewood" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
             <h2 class="title">Firewood</h2>
             Firewood... available by order.
         </div><div class="splitContent firewood imgSplitContent"></div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="plow" class="bigContent splitContentWrapper">
         <div class="splitContent plowing imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Plowing</h2>
             Plowing...
         </div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="trees" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
                 <h2 class="title">Christmas Trees and Balsam Wreathes</h2>
                 We make our own fresh-cut balsam wreaths.
@@ -90,7 +105,7 @@
                 Only fresh-cut local will do!
         </div><div class="splitContent trees imgSplitContent"></div>
     </div>
-    <div class="bigContent splitContentWrapper">
+    <div id="syrup" class="bigContent splitContentWrapper">
         <div class="splitContent syrup imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Syrup</h2>
             Home made syrup...
