--- a/index.html
+++ b/index.html
@@ -55,12 +55,48 @@
             </div>
         </div>
     </nav>
-    <div class="mainContent bigContent home">
-        <div class="mainContentWrapper">
-            <div class="textOverlay">
-                <h1>Beaver Pond Farm</h1>
-                <i>The freshest and the best since 1780</i>
+    <div class="mainContent bigContent">
+        <div id="farm-images" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <div class="home mainContent bigContent">
+                        <div class="mainContentWrapper">
+                            <div class="textOverlay">
+                                <h1>Beaver Pond Farm</h1>
+                                <i>The freshest and the best since 1780</i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="field mainContent bigContent">
+                        <div class="mainContentWrapper">
+                            <div class="textOverlay">
+                                <h1>Beaver Pond Farm</h1>
+                                <i>The freshest and the best since 1780</i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="crops mainContent bigContent">
+                        <div class="mainContentWrapper">
+                            <div class="textOverlay">
+                                <h1>Beaver Pond Farm</h1>
+                                <i>The freshest and the best since 1780</i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <a class="left carousel-control" href="#farm-images" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#farm-images" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
     <div id="fruitsAndVeggies" class="bigContent splitContentWrapper">
