Carousel overlay txt stays in place instead of moving w/ img, fix description, fix link img.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Beaver Pond Farm</title>
-    <meta name="description" content="Website for Beaver Pond Farm in Newport, NH">
+    <meta name="description" content="Beaver Pond Farm in Newport, NH">
     <meta name="author" content="Andrew Boutin">
     <meta name="keywords" content="beaver,pond,farm,newport,nh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="image_src" href="imgs/logo.jpg">
+    <link rel="image_src" href="imgs/logo.png">
     <link rel="icon" href="imgs/favicon.ico">
      <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -56,37 +56,16 @@
         </div>
     </nav>
     <div class="mainContent bigContent">
-        <div id="farm-images" class="carousel slide" data-ride="carousel">
+        <div id="farm-images" class="carousel slide" data-ride="carousel" style="position:absolute;width:100%;">
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <div class="home mainContent bigContent">
-                        <div class="mainContentWrapper">
-                            <div class="textOverlay">
-                                <h1>Beaver Pond Farm</h1>
-                                <i>The freshest and the best since 1780</i>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="home mainContent bigContent"></div>
                 </div>
                 <div class="item">
-                    <div class="field mainContent bigContent">
-                        <div class="mainContentWrapper">
-                            <div class="textOverlay">
-                                <h1>Beaver Pond Farm</h1>
-                                <i>The freshest and the best since 1780</i>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="field mainContent bigContent"></div>
                 </div>
                 <div class="item">
-                    <div class="crops mainContent bigContent">
-                        <div class="mainContentWrapper">
-                            <div class="textOverlay">
-                                <h1>Beaver Pond Farm</h1>
-                                <i>The freshest and the best since 1780</i>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="crops mainContent bigContent"></div>
                 </div>
             </div>
             <a class="left carousel-control" href="#farm-images" role="button" data-slide="prev">
@@ -97,6 +76,14 @@
             <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
             </a>
+        </div>
+        <div class="mainContent bigContent" style="position:absolute;">
+            <div class="mainContentWrapper">
+                <div class="textOverlay">
+                    <h1>Beaver Pond Farm</h1>
+                    <i>The freshest and the best since 1780</i>
+                </div>
+            </div>
         </div>
     </div>
     <div id="fruitsAndVeggies" class="bigContent splitContentWrapper">
