--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="beaver,pond,farm,newport,nh">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="image_src" href="imgs/logo.png">
+    <link rel="image_src" href="imgs/logorec.png">
     <link rel="icon" href="imgs/favicon.ico">
      <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -25,6 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="index.html" style="padding-top:2px;padding-bottom:2px;"><img src="imgs/logorectangle.png" style="height:100%;"></a>
                 <a class="navbar-brand" href="index.html">Beaver Pond Farm</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
