Improved favicon and added scroll hint.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                 </div>
             </div>
         </div>
+        <div class="mainContent bigContent" style="position:absolute;">
+            <div class="mainContentWrapper" style="vertical-align: bottom;color:white;padding-bottom:10px;">
+                <b>Sroll down to see more!</b>
+            </div>
+        </div>
     </div>
     <div id="fruitsAndVeggies" class="bigContent splitContentWrapper">
         <div class="splitContent textSplitContentWrapper">
