--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav id="navwrapper" class="navbar navbar-default navbar-fixed-top">
@@ -167,16 +169,39 @@
             Home made syrup...
         </div>
     </div>
-    <div class="footer">
-        <div class="footerCell">
-            <div class="footerLogo logo"></div>
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <h3>Beaver Pond Farm</h3>
+                <div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <ul>
+                            <i>The freshest and the best since 1780</i>
+                        </ul>
+                        <ul class="social">
+                            <li><a href="https://www.facebook.com/beaverpondfarmnh"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://www.google.com/maps/place/Beaver+Pond+Farm+Stand/@43.367754,-72.2667508,17z/data=!4m7!3m6!1s0x0:0x216e134fbc8ae7d!8m2!3d43.367754!4d-72.2645621!9m1!1b1"><i class="fa fa-map-marker"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                        <ul>
+                            <li>1047 John Stark Highway</li>
+                            <li>Newport, New Hampshire 03773</li>
+                            <li>(603) 543-1107</li>
+                            <li>beaverpondfarm1780@gmail.com</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="footerText footerCell">1047 John Stark Highway<br>
-            Newport, New Hampshire 03773<br>
-            (603) 543-1107<br>
-            beaverpondfarm1780@gmail.com
-        </div>
-    </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 </html>
