--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </div>
         </div>
         <div class="mainContent bigContent" style="position:absolute;">
-            <div class="mainContentWrapper" style="vertical-align: bottom;color:white;padding-bottom:10px;">
-                <b>Sroll down to see more!</b>
+            <div class="mainContentWrapper" style="vertical-align: bottom;color:black;padding-bottom:10px;font-size:18px;font-weight:bolder;">
+                Scroll down to see more!
             </div>
         </div>
         <a class="left carousel-control" href="#farm-images" role="button" data-slide="prev">
@@ -110,7 +110,7 @@
     <div id="localWares" class="bigContent splitContentWrapper">
         <div class="splitContent localWares imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Local Wares</h2>
-            Market. Local cheese, ice cream, soda, spices, eggs, meats, honey etc. crafts and trinkets (NH/VT) cider.. food products, gift baskets
+            Market. Local cheese, ice cream, soda, spices, eggs, meats, honey etc. crafts and trinkets (NH/VT) cider.. food products, gift baskets, snacks
         </div>
     </div>
     <div id="bakedGoods" class="bigContent splitContentWrapper">
@@ -122,7 +122,7 @@
     <div id="meat" class="bigContent splitContentWrapper">
         <div class="splitContent meat imgSplitContent"></div><div class="splitContent textSplitContentWrapper">
             <h2 class="title">Meat</h2>
-            Beef and lamb raised right on the farm.
+            Beef and lamb raised right on the farm. Pork, Chicken, Buffalo, Smoked Meats.
         </div>
     </div>
     <div id="pickYourOwn" class="bigContent splitContentWrapper">
