--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="index" style="padding-top:2px;padding-bottom:2px;"><img src="imgs/logorectangle.png" style="height:100%;"></a>
                 <a class="navbar-brand" href="index">Beaver Pond Farm</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
